@@ -1,5 +1,11 @@
 2007-11-04  Per Bothner  <per@bothner.com>
 
+	* ModuleExp.java (alwaysCompile): Set to true rather than false.
+	This allows better consistency and stack traces.
+	(evalModule): If an important bindings is constant (and not indirect
+	or a procedure) now make it a StaticFieldLocation.  This makes it
+	trivial to handle define-constant.
+
 	* Declaration.java (hasConstantValue): New method.
 	* FindCapturedVars.java (capture): Return immediately if
 	hasConstantValue.
