@@ -1,3 +1,10 @@
+2007-11-04  Per Bothner  <per@bothner.com>
+
+	* ArrayClassLoader.java: Revert following the Java2 delegation model.
+	Give the current ClassLoader priority over ancestor ClassLoaders.
+	(loadClass): New methods.
+	(findClass): Remove method.
+
 2007-11-02  Per Bothner  <per@bothner.com>
 
 	* ObjectType.java (getField, getMethod, getMethods): New methods.
